--- a/css/main-style.css
+++ b/css/main-style.css
@@ -423,7 +423,7 @@ h1, h2, h3, h4, h5, h6 {
 	transition: all 0.1s ease;
 	visibility: hidden;
 }
-.our-team .member-description.active {
+.member-description.load-description.active {
 	height: 225px;
 	padding: 20px;
 	border: 1px solid #ebf2f3;
